# swww-setter-general

./: CMakeLists.txt  Makefile  compile_flags.txt  create.json  readme.md
plugins/: change-waybar-color.lua  save.lua
src/: main.cpp
